# proof-of-post

./: Anchor.toml  README.md  package-lock.json  package.json
programs/proof-of-post/: Cargo.toml
programs/proof-of-post/src/: lib.rs
tests/: proof-of-post.ts
zk-program/post_verification/: Cargo.toml  manifest.json
zk-program/post_verification/src/: main.rs
