[package]
name = "proof-of-post"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_of_post"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "bonsol-anchor-interface/idl-build"]

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.31.1" ,features = ["init-if-needed"] }
anchor-spl = {  version = "0.31.1" }
bonsol-anchor-interface = { version = "0.6.0" }
spl-token = {version ="6.0.0"}
spl-associated-token-account = {version ="6.0.0"}

